deploy/kubernetes/istio/vLlama3.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: llama-8b
  namespace: default
  labels:
    app: vllm-llama3-8b-instruct
spec:
  replicas: 1
  selector:
    matchLabels:
      app: vllm-llama3-8b-instruct
  template:
    metadata:
      labels:
        app: vllm-llama3-8b-instruct
    spec:
      volumes:
      - name: cache-volume
        persistentVolumeClaim:
          claimName: llama-8b
      # vLLM needs to access the host's shared memory for tensor parallel inference.
      # - name: shm
      #   emptyDir:
      #     medium: Memory
      #     sizeLimit: "2Gi"
      containers:
      - name: llama-8b
        image: vllm/vllm-openai:v0.17.0
        command: ["/bin/sh", "-c"]
        args: [
          "vllm serve meta-llama/Llama-3.1-8B-Instruct --served-model-name llama3-8b meta-llama/Llama-3.1-8B-Instruct --enable-chunked-prefill --max_num_batched_tokens 1024"
        ]
        ports:
        - containerPort: 8000
        resources:
          limits:
            #            cpu: "10"
            #            memory: 40G
            nvidia.com/gpu: "1"
          requests:
            #            cpu: "10"
            #            memory: 40Gi
            nvidia.com/gpu: "1"
        volumeMounts:
        - mountPath: /root/.cache/huggingface
          name: cache-volume
        # - name: shm
        #   mountPath: /dev/shm
        livenessProbe:
          httpGet:
            path: /health
            port: 8000
          initialDelaySeconds: 600
          periodSeconds: 10
        readinessProbe:
          httpGet:
            path: /health
            port: 8000
          initialDelaySeconds: 600
          periodSeconds: 5
---
apiVersion: v1
kind: Service
metadata:
  name: llama-8b
  namespace: default
spec:
  ports:
  - name: http-llama-8b
    port: 80
    protocol: TCP
    targetPort: 8000
  # The label selector should match the deployment labels & it is useful for prefix caching feature
  selector:
    app: vllm-llama3-8b-instruct
  sessionAffinity: None
  type: ClusterIP
