deploy/kubernetes/istio/httproute-llama3-8b.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: vsr-llama8b
spec:
  parentRefs:
  - group: gateway.networking.k8s.io
    kind: Gateway
    name: inference-gateway
  rules:
  - backendRefs:
    - name: llama-8b          # service llama-8b
      namespace: default
      port: 80
    matches:
    - path:
        type: PathPrefix
        value: /
      headers:
        - type: Exact
          name: x-selected-model
          value: 'llama3-8b'
    timeouts:
      request: 300s
