deploy/kubernetes/istio/httproute-phi4-mini.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: vsr-phi4-mini
spec:
  parentRefs:
  - group: gateway.networking.k8s.io
    kind: Gateway
    name: inference-gateway
  rules:
  - backendRefs:
    - name: phi4-mini          # service phi4-mini
      namespace: default
      port: 80
    matches:
    - path:
        type: PathPrefix
        value: /
      headers:
        - type: Exact
          name: x-selected-model
          value: 'phi4-mini'
    timeouts:
      request: 300s
